--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,8 @@
 
     body{
-        background: black;
+        background-color:  rgb(81, 81, 238);
     }
+
     nav{
         display: block;
         margin-top: 80px;
@@ -11,9 +12,9 @@
     }
     nav a{
         border-radius: 10px;
-        border: 2px solid rgba(255, 255, 255, 0.684);
-        background-color: white;
-        color: orange;
+        border: 2px solid rgb(149, 149, 247);
+        background-color: rgb(149, 149, 247);
+        color: white;
         font-size: 22px;
         height: 50%;
         margin-top: 10px;
