--- a/css/20.css
+++ b/css/20.css
@@ -6,10 +6,11 @@ table {
     text-align: left;
 }
 th, td {
+    text-align: center;
     border: 2px solid #000000;
     padding: 8px;
 }
 th {
-    background-color: #d3d3d3;
+    background-color: rgb(117, 117, 240);
     font-weight: bold;
 }
